css/main.css
/* DEFAULT */

html {
  scroll-behavior: smooth;
}

body {
    background-color: rgb(255, 255, 255);
}

h1 {
    font-family: "Bebas Neue", sans-serif;
    font-weight: 400;
    color:rgb(240, 180, 198);
    text-align: center;
    font-size: 20vw;
    margin-top: 200px;
    margin-bottom: 0;
}

h2 {
  font-family: "Bebas Neue", sans-serif;
  font-size: 175px;
  font-weight: 400;
  font-style: normal;
  color: rgb(0, 0, 0);
  text-align: center;
  margin: 0;

}

h3 {
  font-family: "Bebas Neue", sans-serif;
  font-size: 30px;
  font-weight: 400;
  font-style: normal;
  color: rgb(0, 0, 0);
  margin-bottom: 0;
}


p {
    font-family: "Montserrat", sans-serif;
    font-weight:400;
    font-size: 16px;
    padding: 0px;
    margin: 0;
}

a {
    font-family: "Montserrat", sans-serif;
    color: rgb(0, 0, 0);
    letter-spacing: 1px;
    font-size: 20px; 
    font-weight: 500;
    padding: 10px;
    text-decoration: none;
}

a:hover {
    color: white;
    background-color: black;
    border-radius: 30px;
}

article {
  display:flex;
  justify-content: center;
  margin-left: 200px;
  margin-right: 200px;
  margin-top: 50px;
  border-radius: 30px;
}

article:hover {
  background-color: rgb(196, 233, 244);

}


/* HEADER */

.logo {
  max-width: 100%;
  height: 75px;
  padding: 20px;
}

.header-flex {
    display: flex;
    justify-content: space-between;
    padding: 20px;
    align-items: center;
}

.header-and-hero {
    background-color: #9468AC;
    min-height: 820px;
}

.subtitle {
    font-family: "Montserrat", sans-serif;
    font-weight:500;
    font-size: 27px;
    margin-top: -20px;
    margin-bottom: 50px;
}


/* HEADER RESPONSIVENESS */


.offcanvas-nav {
  position: relative;
}

.menu {
  position: fixed;
  top: 164px;
  right: 0;
  height: 100%;
  width: 100%;
  display: flex;
  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
  transform: translateX(100%);
  transition: transform 0.3sease;
  flex-direction: column;
  align-items: center;

}

.menu.expanded {
  transform: translateX(0);
  background-color: rgb(255, 255, 255);
}


.hamburger-line {
  width: 35px;
  height: 5px;
  background-color: black;
  margin: 6px 0;
}

@media (min-width:768px) {
  .offcanvas-nav {
    display: block;
  }
  .menu {
    display: block;
    position: static;
    width: auto;
    transform: none;
    box-shadow: none;
  }
  .menu-toggle {
    display: none;
  }
}

@media (max-width:768px) {
  a {
    margin-top: 40px;
  }

  .subtitle {
    font-size: 20px;
    margin-top: 15px;
    margin-left: 40px;
    margin-right: 40px;
    line-height: 1.5;
  }

}


/* HERO */

.hero-area{
    text-align: center;
}

.register-button {
    padding: 10px;
    margin: 10px;
    background-color: rgb(240,180,198);
    border-radius: 30px;
}

/* INTRODUCTION */

.introduction-flex {
  display: flex;
  max-height: 500px;
}

.subtitle-2 {
  font-size: 6vw;
  font-weight: 400;
  margin: 40px;
  text-align: left;
  color:rgb(192, 93, 35);
  margin-bottom: 0;
}

.intro-type {
  margin-top: 10px;
  margin: 40px;
  text-align: left;
  color: #843E15;
  line-height: 25px;
  margin-top: 10px;
}

.intro-right {
  background-color: rgb(230, 217, 128);
}

.cookie-image {
  background-image: url(../img/pie-bright.png);
  background-size: cover;
  background-position: center;
  width: 50%;
  flex-shrink: 0;
  min-height: 400px;
}

@media (max-width: 768px) {
  .introduction-flex {
    display:block;
    background-image: url("../img/pie-bright.png");
    background-size: cover;
    width: 100%;
  }

  .cookie-image {
    background-image: none;
    height:500px;
  }

  .intro-right {
    background-color: rgba(255, 238, 188, 0.847);
    height: 500px;
    margin-top: -500px;
    display: flex;
    flex-direction: column;
    justify-content: center;
  }

  .intro-type {
    color: black;
    text-shadow: 5px rgb(0, 0, 0);
  }

  .subtitle-2 {
    font-size: 50px;
    padding-top: 30px;
    color:rgb(0, 0, 0)
  }
}

/* MAIN */

.subtitle-3 {
  font-size: 100px;
  font-weight: 400;
  text-align: left;
  color:rgb(0, 0, 0);
  text-align: center;
}

section p{
  margin-bottom: 40px;
}

.section-titles .section-titles-2 {
  padding: 40px;
}

.subtitle-3-background {
  background-color: rgb(240, 180, 198);
  width: 500px;
  margin:auto;
  border-radius: 25px;
  margin-top: 70px;
}

.treats-1 {
  height: auto;
  display: grid; grid-template-columns: 50% 50%;
  align-items: center;
  width: 70%;
  margin: auto;
  margin-top: 50px;
  margin-bottom: 50px;
  padding: 50px;

}

.treats-image-1 {
  max-width: 100%;
  height: 200px;
  object-fit: contain;
  overflow: visible;
}

.treats-2 {
  height: auto;
  display: grid; grid-template-columns: 50% 50%;
  align-items: center;
  width: 70%;
  margin: auto;
  margin-top: 50px;
  margin-bottom: 50px;
  padding: 30px;
}

.treats-image-2 {
  max-width: 100%;
  height: 300px;
  object-fit: contain;
}

.treats-3 {
  height: auto;
  display: grid; grid-template-columns: 50% 50%;
  align-items: center;
  width: 70%;
  margin: auto;
  margin-top: 50px;
  margin-bottom: 50px;
  padding: 30px;
}

.treats-image-3 {
  max-width: 100%;
  height: 300px;
  object-fit: contain;
}

.treats-4 {
  height: auto;
  display: grid; grid-template-columns: 50% 50%;
  align-items: center;
  width: 70%;
  margin: auto;
  margin-top: 50px;
  margin-bottom: 50px;
  padding: 30px;
}

.treats-image-4 {
  max-width: 100%;
  height: 300px;
  object-fit: contain;
}

@media (max-width: 768px) {
  .subtitle-3 {
    font-size: 50px;
    margin-top: 30px;
  }

  .subtitle-3-background {
    width: 300px;
    margin: auto;
  }

  .register-button {
    font-size: 16px;
    padding: 10px;
    margin: 10px;
    background-color: rgb(0, 0, 0);
    color: rgb(255, 255, 255);
    border-radius: 30px;
  }

  .section-titles {
    margin-left: -60px;
    background-color: rgb(196, 233, 244);
    border-radius: 25px;
    padding: 20px;
  }

  .section-titles-2 {
      margin-right: -60px;
      background-color: rgb(196, 233, 244);
      border-radius: 25px;
      padding: 20px;

    }
  }


/* FORM */

.subtitle-4 {
  font-size: 100px;
  font-weight: 400;
  text-align: center;
  color:rgb(240, 180, 198);
  text-align: center;
  padding-top: 90px;
}

.p-center {
  text-align: center;
  font-size: 20px;
  margin-top: -10px;
  margin-bottom: 50px;
}

.form-section  {
  background-color: rgb(131, 80, 151);
}

form {
    width: 400px;
    margin: 0 auto;
    padding: 20px;
    display: flex;
    flex-direction: column;

  }
  label {
    display: block;
    margin-bottom: 5px;
   }

   .firstname-label {
    margin-right: 135px;
   }

   .terms-text {
    margin-left: 30px;
   }

  input, select, textarea {
    width: 100%;
    padding: 8px;
    margin: 10px;
    box-sizing: border-box;
    background-color: rgb(255, 255, 255);
    border-radius: 25px;
  }
  .button-2 {
    background-color: rgb(240,180,198);
    font-family: "Montserrat", sans-serif;
    color: white;
    padding: 10px 15px;
    border: none;
    cursor: pointer;
    margin-bottom: 100px;
    border-radius: 25px;
  }

  .button-2:hover {
    background-color: rgb(0, 0, 0);
    color: rgb(255, 255, 255);
  }
  
  .error {
    color: rgb(255, 0, 0);
  }

  .form-flex {
    display: flex;
  }

  .terms {
    display: grid; grid-template-columns: 20px 1fr;
  }

  @media (max-width: 768px) {

    form {
      width: 250px;
    }

    .subtitle-4 {
      font-size: 64px;
    }

    .firstname-label {
      margin-right: 64px;
    }
  }
   
  /* Footer */

  footer {
    text-align: center;
    background-color: rgb(29, 29, 29);
    height: 100px;
    padding: 50px;
    line-height: 1.75;
  }

  footer p {
    color:rgb(255, 255, 255)
  }

  /* THANK YOU */

  .thank-you-text {
    font-size: 16vw;;
  }

  .thank-you p {
    width: 50vw;
    margin: auto;
    margin-bottom: 100px;
  }

